fix alignment on some elements

--- a/src/components/section.ts.less
+++ b/src/components/section.ts.less
@@ -72,7 +72,7 @@
     font-size: 2.25vw !important;
     line-height: 2.25vw !important;
     margin-left: 5% !important;
-    margin-top: 3vh;
+    margin-top: calc(0.8vh + 0.5vw);
     text-align: left !important;
     width: 90% !important;
 }
