--- a/src/static/iframe.less
+++ b/src/static/iframe.less
@@ -3,7 +3,7 @@
 .cac__iframe {
     width: 90%;
     height: 80%;
-    background-color: transparent;
+    background-color: @secondary6;
     border-radius: 20px;
     margin-top: 2.5%;
     border: 4px solid @theme !important;
