--- a/src/static/style.less
+++ b/src/static/style.less
@@ -125,7 +125,7 @@ svg {
     background-color: @theme;
     border-radius: 1vw;
     margin-right: 1%;
-    margin-top: 1%;
+    margin-top: calc(0.8vh + 0.5vw); // aligned with the logo element
     display: flex;
     justify-content: center;
     align-self: flex-end;
